aks_manifests/monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    appgw.ingress.kubernetes.io/override-frontend-port: "3000" 
spec:
  ingressClassName: azure-application-gateway
  rules:
  - http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    appgw.ingress.kubernetes.io/override-frontend-port: "9090" 
spec:
  ingressClassName: azure-application-gateway
  rules:
  - http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          service:
            name: prometheus-k8s
            port:
              number: 9090

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
  namespace: monitoring
  annotations:
    appgw.ingress.kubernetes.io/override-frontend-port: "9093" 
spec:
  ingressClassName: azure-application-gateway
  rules:
  - http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          service:
            name: alertmanager-main
            port:
              number: 9093
